Fixed an alignment issue with the search bar and updated the screenshots

--- a/src/app/todo-list/todo-list.component.scss
+++ b/src/app/todo-list/todo-list.component.scss
@@ -3,12 +3,27 @@
   flex-wrap: wrap;
   gap: 15px;
   margin-bottom: 15px;
+  align-items: flex-end;
   
   .search-box {
     flex: 1 1 300px;
     
     mat-form-field {
       width: 100%;
+      margin: 0;
+      
+      ::ng-deep .mat-mdc-text-field-wrapper {
+        padding-top: 0;
+      }
+      
+      ::ng-deep .mat-mdc-form-field-infix {
+        padding-top: 8px;
+        padding-bottom: 8px;
+      }
+      
+      ::ng-deep .mat-mdc-form-field-subscript-wrapper {
+        display: none;
+      }
     }
   }
   
@@ -17,6 +32,7 @@
     flex-wrap: wrap;
     gap: 10px;
     align-items: center;
+    padding-bottom: 4px;
   }
 }
 
